# verses-tui

./: .gitignore  API.md  BACKLOG.md  CLAUDE.md  CMakeLists.txt  README.md  TASKS.md
include/: config.hpp  globals.hpp  http_client.hpp  login_window.hpp  message_dialog.hpp  token_cache.hpp  xdg.hpp
src/: config.cpp  http_client.cpp  login_window.cpp  main.cpp  message_dialog.cpp  token_cache.cpp  xdg.cpp
